<resources>
    <string name="app_name">BABYGAGE</string>
    <string name="ek_img_content">Image</string>
    <string name="babygage_string">babygage</string>
    <string name="babygage_ek1_string">babygage</string>
    <string name="household_ledger_string">Household Ledger</string>
    <string name="financial_audit_string">FinancialAudit</string>
    <string name="hi_ooo__welcome_to_easygage__string">Hi OOO! Welcome to EASYGAGE!</string>
    <string name="___expenditure___income___diary_string">: Expenditure: Income: Diary      </string>
    <string name="_person_outline_string">person_outline</string>
    <string name="easygage_string">easygage</string>
    <string name="mypage_string">Mypage</string>
    <string name="household_ledger_ek1_string">Household Ledger</string>
    <string name="financial_audit_ek1_string">FinancialAudit</string>
    <string name="settings_string">Settings</string>
    <string name="__20000_string">-20000</string>
    <string name="__100000_string">+100000</string>
    <string name="__20000_ek1_string">-20000</string>
    <string name="__100000_ek1_string">+100000</string>
    <string name="_2022__10_string">2022. 10</string>
    <string name="_2022__11_string">2022. 11</string>
    <string name="_2022__09_string">2022. 09</string>
    <string name="today_s_expenditure_details_string">Todays expenditure details</string>
    <string name="today_s_income_details_string">Todays income details</string>
    <string name="__20000_ek2_string">-20000</string>
    <string name="__100000_ek2_string">+100000</string>
    <string name="__20000_ek3_string">-20000</string>
    <string name="__100000_ek3_string">+100000</string>
    <string name="__20000_ek4_string">-20000</string>
    <string name="__100000_ek4_string">+100000</string>
    <string name="hi_ooo__welcome_to_easygage__ek1_string">Hi OOO! Welcome to EASYGAGE!</string>
    <string name="babygage_ek2_string">babygage</string>
    <string name="__20000_ek5_string">-20000</string>
    <string name="__100000_ek5_string">+100000</string>
    <string name="__20000_ek6_string">-20000</string>
    <string name="__100000_ek6_string">+100000</string>
    <string name="_2022__10_ek1_string">2022. 10</string>
    <string name="_2022__11_ek1_string">2022. 11</string>
    <string name="_2022__09_ek1_string">2022. 09</string>
    <string name="__20000_ek7_string">-20000</string>
    <string name="__100000_ek7_string">+100000</string>
    <string name="__20000_ek8_string">-20000</string>
    <string name="__100000_ek8_string">+100000</string>
    <string name="__20000_ek9_string">-20000</string>
    <string name="__100000_ek9_string">+100000</string>
    <string name="hi_ooo__welcome_to_easygage__ek2_string">Hi OOO! Welcome to EASYGAGE!</string>
    <string name="upload_string">upload</string>
    <string name="arrow_back_string">arrow_back</string>
    <string name="person_outline_ek1_string">person_outline</string>
    <string name="mypage_ek1_string">Mypage</string>
    <string name="household_ledger_ek2_string">Household Ledger</string>
    <string name="financial_audit_ek2_string">FinancialAudit</string>
    <string name="settings_ek1_string">Settings</string>
    <string name="import_from_gallery_string">Import from Gallery</string>
    <string name="take_a_picture_string">Take a picture</string>
    <string name="upload_ek1_string">upload</string>
    <string name="___expenditure___income_string">: Expenditure: Income     </string>
    <string name="easygage_ek1_string">easygage</string>
    <string name="__20000_ek10_string">-20000</string>
    <string name="__100000_ek10_string">+100000</string>
    <string name="__20000_ek11_string">-20000</string>
    <string name="__100000_ek11_string">+100000</string>
    <string name="_2022__10_ek2_string">2022. 10</string>
    <string name="_2022__11_ek2_string">2022. 11</string>
    <string name="_2022__09_ek2_string">2022. 09</string>
    <string name="today_s_expenditure_details_ek1_string">Todays expenditure details</string>
    <string name="today_s_income_details_ek1_string">Todays income details</string>
    <string name="__20000_ek12_string">-20000</string>
    <string name="__100000_ek12_string">+100000</string>
    <string name="__20000_ek13_string">-20000</string>
    <string name="__100000_ek13_string">+100000</string>
    <string name="__20000_ek14_string">-20000</string>
    <string name="__100000_ek14_string">+100000</string>
    <string name="hi_ooo__welcome_to_easygage__ek3_string">Hi OOO! Welcome to EASYGAGE!</string>
    <string name="arrow_back_ek1_string">arrow_back</string>
    <string name="babygage_ek3_string">babygage</string>
    <string name="__20000_ek15_string">-20000</string>
    <string name="__100000_ek15_string">+100000</string>
    <string name="__20000_ek16_string">-20000</string>
    <string name="__100000_ek16_string">+100000</string>
    <string name="_2022__10_ek3_string">2022. 10</string>
    <string name="_2022__11_ek3_string">2022. 11</string>
    <string name="_2022__09_ek3_string">2022. 09</string>
    <string name="__20000_ek17_string">-20000</string>
    <string name="__100000_ek17_string">+100000</string>
    <string name="__20000_ek18_string">-20000</string>
    <string name="__100000_ek18_string">+100000</string>
    <string name="hi_ooo__welcome_to_easygage__ek4_string">Hi OOO! Welcome to EASYGAGE!</string>
    <string name="__20000_ek19_string">-20000</string>
    <string name="__100000_ek19_string">+100000</string>
    <string name="person_outline_ek2_string">person_outline</string>
    <string name="mypage_ek2_string">Mypage</string>
    <string name="household_ledger_ek3_string">Household Ledger</string>
    <string name="financial_audit_ek3_string">FinancialAudit</string>
    <string name="settings_ek2_string">Settings</string>
    <string name="my_page_string">My Page</string>
    <string name="abc_string">abc</string>
    <string name="_12345678_naver_com_string">12345678@naver.com</string>
    <string name="upload_ek2_string">upload</string>
    <string name="arrow_back_ek2_string">arrow_back</string>
    <string name="babygage_ek4_string">babygage</string>
    <string name="name_string">Name</string>
    <string name="e_mail_string">E-mail</string>
    <string name="november_string">November</string>
    <string name="houshold_ledger_string">HousholdLedger</string>
    <string name="financial_audit_ek4_string">FinancialAudit</string>
    <string name="sum___string">sum : </string>
    <string name="___string">/</string>
    <string name="_100000_string">100000</string>
    <string name="frequency___string">frequency :</string>
    <string name="_10_string">10</string>
    <string name="octobor_string">Octobor</string>
    <string name="september_string">September</string>
    <string name="my_expenditure___household_ledger_string">My Expenditure | Household Ledger</string>
    <string name="person_outline_ek3_string">person_outline</string>
    <string name="mypage_ek3_string">Mypage</string>
    <string name="household_ledger_ek4_string">Household Ledger</string>
    <string name="financial_audit_ek5_string">FinancialAudit</string>
    <string name="settings_ek3_string">Settings</string>
    <string name="my_page_ek1_string">My Page</string>
    <string name="upload_ek3_string">upload</string>
    <string name="arrow_back_ek3_string">arrow_back</string>
    <string name="babygage_ek5_string">babygage</string>
    <string name="november_ek1_string">November</string>
    <string name="houshold_ledger_ek1_string">HousholdLedger</string>
    <string name="financial_audit_ek6_string">FinancialAudit</string>
    <string name="sum___ek1_string">sum : </string>
    <string name="___ek1_string">/</string>
    <string name="_100000_ek1_string">100000</string>
    <string name="frequency___ek1_string">frequency :</string>
    <string name="_10_ek1_string">10</string>
    <string name="octobor_ek1_string">Octobor</string>
    <string name="september_ek1_string">September</string>
    <string name="my_expenditure___financial_audit_string">My Expenditure | Financial Audit</string>
    <string name="abc_ek1_string">abc</string>
    <string name="_12345678_naver_com_ek1_string">12345678@naver.com</string>
    <string name="name_ek1_string">Name</string>
    <string name="e_mail_ek1_string">E-mail</string>
    <string name="person_outline_ek4_string">person_outline</string>
    <string name="mypage_ek4_string">Mypage</string>
    <string name="household_ledger_ek8_string">Household Ledger</string>
    <string name="financial_audit_ek7_string">FinancialAudit</string>
    <string name="settings_ek4_string">Settings</string>
    <string name="delete_string">Delete</string>
    <string name="edit_string">Edit</string>
    <string name="household_ledger_ek9_string">Household Ledger</string>
    <string name="name_ek2_string">Name</string>
    <string name="diary_string">Diary</string>
    <string name="transaction_string">Transaction</string>
    <string name="kaopad_string">Kaopad</string>
    <string name="_1_string">1</string>
    <string name="s_string">s</string>
    <string name="_7_900_won_string">7,900 won</string>
    <string name="number_string">Number</string>
    <string name="description_string">Description</string>
    <string name="total_price_string">Total Price</string>
    <string name="upload_ek4_string">upload</string>
    <string name="arrow_back_ek4_string">arrow_back</string>
    <string name="babygage_ek6_string">babygage</string>
    <string name="_2022_string">2022</string>
    <string name="writing_string">Writing</string>
    <string name="_10_ek2_string">10</string>
    <string name="_5_string">5</string>
    <string name="write_anything__string">Write anything!</string>
    <string name="save_a_diary_string">Save a diary</string>
    <string name="person_outline_ek5_string">person_outline</string>
    <string name="mypage_ek5_string">Mypage</string>
    <string name="household_ledger_ek10_string">Household Ledger</string>
    <string name="financial_audit_ek11_string">FinancialAudit</string>
    <string name="settings_ek5_string">Settings</string>
    <string name="financial_audit_ek12_string">Financial Audit</string>
    <string name="name_ek3_string">Name</string>
    <string name="transaction_ek1_string">Transaction</string>
    <string name="kaopad_ek1_string">Kaopad</string>
    <string name="mouse_string">Mouse</string>
    <string name="keyboard_string">Keyboard</string>
    <string name="_1_ek1_string">1</string>
    <string name="_1_ek2_string">1</string>
    <string name="_1_ek3_string">1</string>
    <string name="s_ek1_string">s</string>
    <string name="s_ek2_string">s</string>
    <string name="s_ek3_string">s</string>
    <string name="_7_900_won_ek1_string">7,900 won</string>
    <string name="_10_500_won_string">10,500 won</string>
    <string name="_13_500_won_string">13,500 won</string>
    <string name="number_ek1_string">Number</string>
    <string name="babygage_ek9_string">babygage</string>
    <string name="sign_up_ek3_string">Sign Up</string>
    <string name="put_your_e_mail__id__string">Put your e-mail (ID)</string>
    <string name="put_your_password_string">Put your password</string>
    <string name="put_your_name_string">Put your name</string>
    <string name="e_mail_id__string">e-mail(ID)</string>
    <string name="name_ek4_string">Name</string>
    <string name="password_string">Password</string>
    <string name="put_your_password_again_string">Put your password again</string>
    <string name="babygage_ek10_string">babygage</string>
    <string name="sign_up_ek5_string">Sign Up</string>
    <string name="successful_sign_up_ek3_string">Successful Sign Up</string>
    <string name="go_to_log_in_page_string">Go to Log-in Page</string>
    <string name="babygage_ek11_string">babygage</string>
    <string name="log_in_ek3_string">Log-in</string>
    <string name="find_password_string"><u>Find Password</u></string>
</resources>