<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="114dp"
        android:layout_height="99dp"
        android:layout_marginStart="230dp"
        app:srcCompat="@drawable/logo" />


    <RelativeLayout
        android:id="@+id/group_17_ek5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginTop="17dp">


        <RelativeLayout
            android:id="@+id/group_2_ek10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="108dp"
            android:layout_marginTop="0dp">


            <RelativeLayout
                android:id="@+id/group_12_ek10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp">


            </RelativeLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/babygage_ek9"
            android:layout_width="127dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal|center"
            android:layout_marginLeft="-3dp"
            android:layout_marginTop="11dp"
            android:gravity="center"
            android:text="@string/babygage_ek9_string"
            android:textColor="@color/babygage_color"
            android:textSize="20sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/sign_up_ek3"
        android:layout_width="177.5dp"
        android:layout_height="41.5dp"
        android:layout_marginLeft="21.01dp"
        android:layout_marginTop="115dp"
        android:text="@string/sign_up_ek3_string"
        android:textColor="@color/babygage_color"
        android:textSize="13sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/line_15"
        android:layout_width="161.03dp"
        android:layout_height="1dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="136dp"
        android:background="@drawable/line_15_shape" />

    <Button
        android:id="@+id/signupbtn"
        android:layout_width="344dp"
        android:layout_height="64dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="630dp"
        android:background="@drawable/_rectangle_23_shape"
        android:text="SIGN UP"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:backgroundTint="@color/_rectangle_23_color" />

    <TextView
        android:id="@+id/email_id"
        android:layout_width="106.5dp"
        android:layout_height="34.5dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="202dp"
        android:text="@string/e_mail_id__string"
        android:textColor="@color/babygage_color"
        android:textSize="13sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/userpassword"
        android:layout_width="344dp"
        android:layout_height="58dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="457dp"
        android:background="@drawable/rectangle_17_ek2_shape"
        android:hint="@string/put_your_password_string"
        android:paddingStart="10dp"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="344dp"
        android:layout_height="56dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="343dp"
        android:background="@drawable/rectangle_20_shape"
        android:hint="@string/put_your_name_string"
        android:paddingStart="10dp"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/userConfirmPassword"
        android:layout_width="344dp"
        android:layout_height="58dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="540dp"
        android:background="@drawable/rectangle_21_shape"
        android:hint="@string/put_your_password_again_string"
        android:paddingStart="10dp"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="92.5dp"
        android:layout_height="34.5dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="313dp"
        android:text="@string/name_ek4_string"
        android:textColor="@color/babygage_color"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="115.5dp"
        android:layout_height="34.5dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="429dp"
        android:text="@string/password_string"
        android:textColor="@color/babygage_color"
        android:textSize="13sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/useremail"
        android:layout_width="344dp"
        android:layout_height="58dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="231dp"
        android:background="@drawable/rectangle_16_ek2_shape"
        android:hint="@string/put_your_e_mail__id__string"
        android:paddingStart="10dp"
        android:textSize="16dp" />


</RelativeLayout>